# magnetedge

./: .gitignore  Cargo.toml  README.md  TERMUX_BUILD.md  build_all.bat  build_all.sh
.cargo/: config.toml
.github/workflows/: build.yml
POW-Client/: index.js  package-lock.json  package.json  readme.md
src/: contract.rs  hash_engine.rs  main.rs  memory.rs  parallel.rs  tui_monitor.rs
