[package]
name = "pow-client-rust"
version = "0.1.0"
edition = "2021"
authors = ["MagnetPOW Team"]
description = "Magnet POW区块链挖矿客户端的Rust实现"

[dependencies]
ethers = { version = "2.0", features = ["abigen", "legacy"] }
tokio = { version = "1.28", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
keccak-hash = "0.10"
hex = "0.4"
indicatif = "0.17"
colored = "2.0"
dialoguer = "0.10"
console = "0.15"
num-bigint = "0.4"
num-traits = "0.2"
dotenv = "0.15"
lazy_static = "1.4"
futures = "0.3"
rand = "0.8"
clap = { version = "4.3", features = ["derive"] }
num_cpus = "1.16"
rayon = "1.7"
tiny-keccak = { version = "2.0", features = ["keccak"] }
parking_lot = "0.12"
jemallocator = { version = "0.5", optional = true }

[target.'cfg(not(target_os = "windows"))'.dependencies]
jemallocator = "0.5"

# Termux特定配置
[target.'cfg(target_os = "android")'.dependencies]
# 在Termux环境中使用标准系统内存分配器
# jemallocator可能在Android/Termux上存在兼容性问题

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
debug = false
incremental = false
overflow-checks = false

[profile.release.build-override]
opt-level = 3

[build]
rustflags = ["-C", "target-cpu=native"]

# 针对ARM处理器的特定优化
[target.'cfg(target_arch = "aarch64")'.build]
rustflags = ["-C", "target-feature=+neon"]

[[bin]]
name = "pow-client"
path = "src/main.rs" 